Link benchmark notebook to log files saved in repo

--- a/benchmarks/Benchmarks.ipynb
+++ b/benchmarks/Benchmarks.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Benchmarks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJNWjkGZiX4EkdLBG+YgfD",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPWETpRJ64uNKOT/wfHpbwC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0Cd3yfQXChPZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Setup"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "reG-TSdK8uvH",
@@ -41,13 +52,45 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "tKFb4EeJ9yGG",
-        "colab_type": "text"
+        "id": "9d1_Am5lCkMK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "8302d1c9-80c6-4da1-d4fc-fee06c2ea21d"
       },
       "source": [
-        ""
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "repo_path = '/content/TypeScript-Multiparty-Sessions'\n",
+        "if os.path.exists(repo_path):\n",
+        "    print('Note: deleting stale repo')\n",
+        "    shutil.rmtree(repo_path)\n",
+        "\n",
+        "!git clone https://github.com/ansonmiu0214/TypeScript-Multiparty-Sessions\n",
+        "benchmark_path = os.path.join(repo_path, 'benchmarks')\n",
+        "assert os.path.exists(benchmark_path)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Note: deleting stale repo\n",
+            "Cloning into 'TypeScript-Multiparty-Sessions'...\n",
+            "remote: Enumerating objects: 1043, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1043/1043), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (636/636), done.\u001b[K\n",
+            "remote: Total 1043 (delta 592), reused 832 (delta 388), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (1043/1043), 643.97 KiB | 908.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (592/592), done.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -612,6 +655,64 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ulUTpzrLD_Wh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 527
+        },
+        "outputId": "68a40227-85c4-4535-df50-068ebdeec800"
+      },
+      "source": [
+        "def visualise_logs(label, message_count):\n",
+        "    for f in os.listdir(os.path.join(benchmark_path, label, 'server', 'logs')):\n",
+        "        print(f)\n",
+        "\n",
+        "visualise_logs('mpst', 100)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100_1590748976.txt\n",
+            "100_1590749041.txt\n",
+            "1000_1590749070.txt\n",
+            "100_1590749011.txt\n",
+            "100_1590748997.txt\n",
+            "500_1590748757.txt\n",
+            "1000_1590749054.txt\n",
+            "100_1590749016.txt\n",
+            "500_1590748787.txt\n",
+            "1000_1590749108.txt\n",
+            "500_1590748776.txt\n",
+            "1000_1590749062.txt\n",
+            "1000_1590749085.txt\n",
+            "1000_1590749078.txt\n",
+            "500_1590748730.txt\n",
+            "100_1590749002.txt\n",
+            "100_1590749020.txt\n",
+            "100_1590748989.txt\n",
+            "1000_1590749092.txt\n",
+            "1000_1590749100.txt\n",
+            "100_1590749006.txt\n",
+            "500_1590748751.txt\n",
+            "500_1590748737.txt\n",
+            "100_1590749025.txt\n",
+            "500_1590748745.txt\n",
+            "500_1590748717.txt\n",
+            "1000_1590749120.txt\n",
+            "500_1590748770.txt\n",
+            "500_1590748764.txt\n",
+            "1000_1590749047.txt\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
