Fix dataframe results for average execution time per message

--- a/benchmarks/Benchmarks.ipynb
+++ b/benchmarks/Benchmarks.ipynb
@@ -6,7 +6,7 @@
       "name": "Benchmarks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOspCFNW5tva9D4Ptb966J4",
+      "authorship_tag": "ABX9TyPlwP4Vsc6ETbND+OC0n4F6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,9 +81,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 153
         },
-        "outputId": "66a2cad5-70a2-437b-b949-dbcc59592b0b"
+        "outputId": "8374af9a-def8-40fc-ca12-51f84a9e37b2"
       },
       "source": [
         "import os\n",
@@ -103,13 +103,14 @@
         {
           "output_type": "stream",
           "text": [
+            "Note: deleting stale repo\n",
             "Cloning into 'TypeScript-Multiparty-Sessions'...\n",
-            "remote: Enumerating objects: 1372, done.\u001b[K\n",
-            "remote: Counting objects: 100% (1372/1372), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (938/938), done.\u001b[K\n",
-            "remote: Total 1372 (delta 629), reused 1147 (delta 415), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (1372/1372), 7.74 MiB | 16.24 MiB/s, done.\n",
-            "Resolving deltas: 100% (629/629), done.\n"
+            "remote: Enumerating objects: 1376, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1376/1376), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (942/942), done.\u001b[K\n",
+            "remote: Total 1376 (delta 631), reused 1145 (delta 415), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (1376/1376), 8.20 MiB | 14.89 MiB/s, done.\n",
+            "Resolving deltas: 100% (631/631), done.\n"
           ],
           "name": "stdout"
         }
@@ -266,7 +267,7 @@
         "    \n",
         "    def df_total_elapsed(self):\n",
         "        \"\"\"Returns dataframe showing total elapsed time for execution.\"\"\"\n",
-        "        \n",
+        "\n",
         "        df = self.df_factory()\n",
         "        for message_count, data in self.message_dict.items():\n",
         "            df.loc[message_count] = [format(data[category][1], self.fmt)\n",
@@ -280,7 +281,7 @@
         "\n",
         "        df = self.df_factory()\n",
         "        for message_count, data in self.message_dict.items():\n",
-        "            df.loc[message_count] = [format(data[category][1] / len(data[category][0]), self.fmt)\n",
+        "            df.loc[message_count] = [format(data[category][1] / message_count, self.fmt)\n",
         "                                     for category in self.categories]\n",
         "        return df\n",
         "\n",
@@ -367,7 +368,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 873
         },
-        "outputId": "fdb8071e-8d85-466b-d1c4-14a8a2148cda"
+        "outputId": "9fd0659c-0c7a-45ed-dc25-d02641757b7b"
       },
       "source": [
         "fig = plt.figure(figsize=(25, 25))\n",
@@ -413,7 +414,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 352
         },
-        "outputId": "1f116a8b-5460-44d4-d19f-963719f46370"
+        "outputId": "ded3999a-8cbf-4c95-9985-30cb6ea3a0f7"
       },
       "source": [
         "print('Total Elapsed Time')\n",
@@ -534,31 +535,31 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>100</th>\n",
-              "      <td>4.48</td>\n",
-              "      <td>5.35</td>\n",
-              "      <td>9.31</td>\n",
+              "      <td>0.90</td>\n",
+              "      <td>1.07</td>\n",
+              "      <td>1.86</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1000</th>\n",
-              "      <td>32.15</td>\n",
-              "      <td>33.20</td>\n",
-              "      <td>57.77</td>\n",
+              "      <td>0.64</td>\n",
+              "      <td>0.66</td>\n",
+              "      <td>1.16</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10000</th>\n",
-              "      <td>177.11</td>\n",
-              "      <td>191.90</td>\n",
-              "      <td>350.76</td>\n",
+              "      <td>0.35</td>\n",
+              "      <td>0.38</td>\n",
+              "      <td>0.70</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "         bare bare_safe    mpst\n",
-              "100      4.48      5.35    9.31\n",
-              "1000    32.15     33.20   57.77\n",
-              "10000  177.11    191.90  350.76"
+              "       bare bare_safe  mpst\n",
+              "100    0.90      1.07  1.86\n",
+              "1000   0.64      0.66  1.16\n",
+              "10000  0.35      0.38  0.70"
             ]
           },
           "metadata": {
@@ -576,7 +577,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 371
         },
-        "outputId": "f151c1ca-d5ff-424d-c5cb-197f9634b049"
+        "outputId": "3c2e4428-9928-42a5-8a4e-253f99bcf187"
       },
       "source": [
         "data.plt_average_elapsed().plot(kind='bar', figsize=(10, 5))\n",
@@ -585,7 +586,7 @@
         "plt.title('Comparing Average Time per Ping-Pong Across Implementations')\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
