Add logic for saving figures

--- a/benchmarks/Benchmarks.ipynb
+++ b/benchmarks/Benchmarks.ipynb
@@ -6,7 +6,7 @@
       "name": "Benchmarks.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPlwP4Vsc6ETbND+OC0n4F6",
+      "authorship_tag": "ABX9TyN93TuMfNrjB/SosVm9Jrv4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "8374af9a-def8-40fc-ca12-51f84a9e37b2"
+        "outputId": "a4b97329-5880-46af-f1d9-16541c948dda"
       },
       "source": [
         "import os\n",
@@ -105,12 +105,12 @@
           "text": [
             "Note: deleting stale repo\n",
             "Cloning into 'TypeScript-Multiparty-Sessions'...\n",
-            "remote: Enumerating objects: 1376, done.\u001b[K\n",
-            "remote: Counting objects: 100% (1376/1376), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (942/942), done.\u001b[K\n",
-            "remote: Total 1376 (delta 631), reused 1145 (delta 415), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (1376/1376), 8.20 MiB | 14.89 MiB/s, done.\n",
-            "Resolving deltas: 100% (631/631), done.\n"
+            "remote: Enumerating objects: 1380, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1380/1380), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (946/946), done.\u001b[K\n",
+            "remote: Total 1380 (delta 634), reused 1145 (delta 415), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (1380/1380), 8.20 MiB | 5.61 MiB/s, done.\n",
+            "Resolving deltas: 100% (634/634), done.\n"
           ],
           "name": "stdout"
         }
@@ -339,10 +339,10 @@
         "colab": {}
       },
       "source": [
-        "def visualise_execution(ax, num_messages, category):\n",
+        "def visualise_execution(fig, ax, num_messages, category):\n",
         "    \"\"\"Plot execution of {category} implementation running the PingPong\n",
         "    protocol for {num_messages} iterations.\"\"\"\n",
-        "    \n",
+        "\n",
         "    assert len(categories) > 0, 'No categories provided'\n",
         "    datasets, _ = data[(num_messages, category)]\n",
         "    for xs, ys in datasets:\n",
@@ -352,9 +352,14 @@
         "    ax.set_ylabel('Elapsed time (ms)')\n",
         "    ax.set_title(f'{category}: Running PingPong {len(datasets)} times '\n",
         "                 f'with {num_messages} messages')\n",
+        "    \n",
+        "    extent = ax.get_window_extent().transformed(fig.dpi_scale_trans.inverted())\n",
+        "    fig.savefig(f'exec_{category}_{num_messages}.png',\n",
+        "                 bbox_inches=extent.expanded(1.25, 1.25))\n",
         "\n",
         "# Uncomment to use as playground\n",
-        "# visualise_execution(plt.gca(), 100, 'mpst')"
+        "# fig = plt.figure()\n",
+        "# visualise_execution(fig, fig.gca(), 100, 'mpst')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -368,7 +373,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 873
         },
-        "outputId": "9fd0659c-0c7a-45ed-dc25-d02641757b7b"
+        "outputId": "3903da32-5001-41cc-8b97-d59a28735e6d"
       },
       "source": [
         "fig = plt.figure(figsize=(25, 25))\n",
@@ -376,7 +381,7 @@
         "    for j, category in enumerate(categories):\n",
         "        idx = i * 3 + j + 1\n",
         "        ax = fig.add_subplot(3, 3, idx)\n",
-        "        visualise_execution(ax, message_count, category)"
+        "        visualise_execution(fig, ax, message_count, category)"
       ],
       "execution_count": 8,
       "outputs": [
@@ -414,7 +419,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 352
         },
-        "outputId": "ded3999a-8cbf-4c95-9985-30cb6ea3a0f7"
+        "outputId": "f50ffee2-190f-4bab-cc49-9dc703897963"
       },
       "source": [
         "print('Total Elapsed Time')\n",
@@ -577,16 +582,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 371
         },
-        "outputId": "3c2e4428-9928-42a5-8a4e-253f99bcf187"
+        "outputId": "f8a660c5-c08e-40ea-ab8c-6e6bc3a484fe"
       },
       "source": [
         "data.plt_average_elapsed().plot(kind='bar', figsize=(10, 5))\n",
         "plt.xlabel('Number of Ping-Pongs exchanged')\n",
         "plt.ylabel('Time per Ping-Pong (ms)')\n",
         "plt.title('Comparing Average Time per Ping-Pong Across Implementations')\n",
+        "\n",
+        "extent = plt.gca().get_window_extent().transformed(fig.dpi_scale_trans.inverted())\n",
+        "plt.savefig('time_per_msg.png',\n",
+        "            bbox_inches=extent.expanded(1.25, 1.5))\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
